--- a/index.html
+++ b/index.html
@@ -15,23 +15,26 @@
 <body>
     <div class="container">
         <h1>Todo List <i class="fa-solid fa-clipboard-list"></i></h1>
-        <div class="input-div">
-            <input class="note-input" type="text" placeholder="Enter task here">
-            <i class="fa-solid fa-plus add-btn"></i>
-        </div>
+        <form class="form">
+            <input class="note-input" type="text" placeholder="Enter task here" required>
+            <button><i class="fa-solid fa-plus add-btn"></i></button>
+        </form>
 
-        <div class="task-box">
-            <h2>Added Tasks</h2>
-            <div class="task">
-                <h4>Task Display</h4>
-                <div class="icons">
-                    <i class="fa-solid fa-pen-to-square"></i>
-                    <i class="fa-solid fa-trash-can"></i>
+        <!-- Todo-list task container -->
+        <div class="todo-container">
+            <h2>Tasks To Complete</h2>
+            <ul class="todo-list">
+
+                <!--! Create this using JS -->
+                <div class="todo">
+                    <li>Task Will Appear Here dynamically with JS</li>
+                    <button class="complete-btn"><i class="fas fa-check"></i></button>
+                    <button class="trash-btn"><i class="fas fa-trash"></i></button>
                 </div>
-            </div>
+
+            </ul>
         </div>
     </div>
-
 
     <script src="script.js"></script>
 </body>
